[Qt] Hook up accelerometer data via Qt DeviceMotion https://bugs.webkit.org/show_bug.cgi?id=47105

Reviewed by Andreas Kling.

Get accelerometer necessary data via Qt mobility library using a
provider class. Enable, also the RotationRate using the current device
orientation provider.

WebCore:

* WebCore.pro:

WebKit/qt:

* WebCoreSupport/DeviceMotionClientQt.cpp:
(WebCore::DeviceMotionClientQt::DeviceMotionClientQt):
(WebCore::DeviceMotionClientQt::~DeviceMotionClientQt):
(WebCore::DeviceMotionClientQt::startUpdating):
(WebCore::DeviceMotionClientQt::stopUpdating):
(WebCore::DeviceMotionClientQt::currentDeviceMotion):
(WebCore::DeviceMotionClientQt::changeDeviceMotion):
* WebCoreSupport/DeviceMotionClientQt.h:
* WebCoreSupport/DeviceMotionProviderQt.cpp: Added.
(WebCore::DeviceMotionProviderQt::DeviceMotionProviderQt):
(WebCore::DeviceMotionProviderQt::~DeviceMotionProviderQt):
(WebCore::DeviceMotionProviderQt::start):
(WebCore::DeviceMotionProviderQt::stop):
(WebCore::DeviceMotionProviderQt::filter):
* WebCoreSupport/DeviceMotionProviderQt.h: Added.
(WebCore::DeviceMotionProviderQt::currentDeviceMotion):

Canonical link: https://commits.webkit.org/59914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69313 268f45cc-cd09-0410-ab3c-d52691b4dbfc