third_party/WebKit/WebKit/qt/WebCoreSupport/DeviceMotionProviderQt.h
@@ -18,41 +18,41 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * Boston, MA 02110-1301, USA.
  *
  */
-#ifndef DeviceMotionClientQt_h
-#define DeviceMotionClientQt_h
+#ifndef DeviceMotionProviderQt_h
+#define DeviceMotionProviderQt_h
 
-#include "DeviceMotionClient.h"
 #include "DeviceMotionData.h"
+#include "RefPtr.h"
 
+#include <QAccelerometerFilter>
 #include <QObject>
 
-class QWebPage;
+QTM_USE_NAMESPACE
 
 namespace WebCore {
 
-class DeviceMotionProviderQt;
+class DeviceOrientationProviderQt;
 
-class DeviceMotionClientQt : public QObject, public DeviceMotionClient {
+class DeviceMotionProviderQt : public QObject, public QAccelerometerFilter {
     Q_OBJECT
 public:
-    DeviceMotionClientQt(QWebPage*);
-    virtual ~DeviceMotionClientQt();
+    DeviceMotionProviderQt();
+    ~DeviceMotionProviderQt();
 
-    virtual void setController(DeviceMotionController*);
-    virtual void startUpdating();
-    virtual void stopUpdating();
-    virtual DeviceMotionData* currentDeviceMotion() const;
-    virtual void deviceMotionControllerDestroyed();
+    bool filter(QAccelerometerReading*);
+    void start();
+    void stop();
+    DeviceMotionData* currentDeviceMotion() const { return m_motion.get(); }
 
-public Q_SLOTS:
-    void changeDeviceMotion();
+Q_SIGNALS:
+    void deviceMotionChanged();
 
 private:
-    QWebPage* m_page;
-    DeviceMotionController* m_controller;
-    DeviceMotionProviderQt* m_provider;
+    RefPtr<DeviceMotionData> m_motion;
+    QAccelerometer m_acceleration;
+    DeviceOrientationProviderQt* m_deviceOrientation;
 };
 
-} // namespece WebCore
+} // namespace WebCore
 
-#endif // DeviceMotionClientQt_h
+#endif // DeviceMotionProviderQt_h
